force-app/main/default/objects/PromotionCode__c/PromotionCode__c.object-meta.xml
<CustomObject>
    <label>Promotion Code</label>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>Promotion Code Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>