force-app/main/default/objects/PromotionCode__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Promotion Codes</relationshipLabel>
    <relationshipName>Promotion_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>