force-app/main/default/objects/PromotionCode__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Promotion Codes</relationshipLabel>
    <relationshipName>Promotion_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>