force-app/main/default/objects/PromotionCode__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Promotion Codes</relationshipLabel>
    <relationshipName>Promotion_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>