force-app/main/default/objects/PromotionCode__c/fields/PromotionCode__c.field-meta.xml
<CustomField>
    <fullName>PromotionCode__c</fullName>
    <label>Promotion Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>